@@ -1,3 +1,7 @@
+2005-10-26 23:30 Mike Park  <mike.park@nasa.gov>
+
+	* src/unit_main.c (gridHistogram) dump hisogram data for octave/MATLAB.
+
 2005-10-26 22:35 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridedger.c (gridedgerDiscretizeEvenly) changed alogorithm
